# Real-time-ray-tracking-on-the-gpu

./: .gitignore  CMakeLists.txt  Raytracing_on_the_GPU
include/: Camera.h  Color.h  ENUMS.h  GPU_Struct.h  Geometry.h  Globals.h  Light.h  Objects.h  Ray.h  Renderer.h  Resolution.h  Scene.h  Surface.h
src/: Camera.cpp  Color.cpp  Geometry.cpp  Globals.cpp  Light.cpp  Objects.cpp  Ray.cpp  Renderer.cpp  Resolution.cpp  Scene.cpp  Surface.cpp  main.cpp  raytracer_kernel.cl
tests/: Geometry_test.cpp  Objects_lights_test.cpp  Scene_tests.cpp
